util: Base64 refactoring (java8+)